--- a/_poly-fluid-sizing.scss
+++ b/_poly-fluid-sizing.scss
@@ -4,6 +4,8 @@
 @import 'map-sort';
 @import 'linear-interpolation';
 
+$breakpoints: () !default;
+
 /// poly-fluid-sizing
 /// Generate linear interpolated size values through multiple break points
 /// @param $property - A string CSS property name
@@ -22,6 +24,18 @@
   // Error if the number of breakpoints is < 2
   @if ($length < 2) {
     @error "poly-fluid-sizing() $map requires at least two values";
+  }
+
+  $keys: map-keys($map);
+
+  @each $key in $keys {
+    $new-key: $key;
+
+    @if (map-has-key($breakpoints, $key)) {
+      $new-key: map-get($breakpoints, $key);
+      $map: map-merge($map, ($new-key: map-get($map, $key)));
+      $map: map-remove($map, $key);
+    }
   }
 
   // Sort the map by viewport width (key)
