--- a/_linear-interpolation.scss
+++ b/_linear-interpolation.scss
@@ -1,3 +1,15 @@
+@use "sass:map";
+@use "sass:math";
+@use "sass:meta";
+
+@function divide($a, $b) {
+  @if map.has-key(meta.module-functions("math"), "div") {
+    @return math.div($a, $b);
+  }
+
+  @return $a / $b;
+}
+
 /// linear-interpolation
 /// Calculate the definition of a line between two points
 /// @param $map - A SASS map of viewport widths and size value pairs
@@ -11,7 +23,7 @@
     @error "linear-interpolation() $map must be exactly 2 values";
   }
   // The slope
-  $m: (map-get($map, nth($keys, 2)) - map-get($map, nth($keys, 1)))/(nth($keys, 2) - nth($keys,1));
+  $m: divide((map-get($map, nth($keys, 2)) - map-get($map, nth($keys, 1))), (nth($keys, 2) - nth($keys,1)));
 
   // The y-intercept
   $b: map-get($map, nth($keys, 1)) - $m * nth($keys, 1);
